samples/_failures_safe/1761260443_6623c3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fb8c7d6e.c: In function ‘tokenize’:
./samples/SAFE/__tmp_fb8c7d6e.c:168:9: error: expected expression at end of input
  168 |         if (parse_number(tokenizer))
      |         ^~
./samples/SAFE/__tmp_fb8c7d6e.c:168:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fb8c7d6e.c:168:9: error: expected declaration or statement at end of input
